--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -194,8 +194,11 @@ numbered=no
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\A}{\mathbb{A}}
+\newcommand{\F}{\mathbb{F}}
 \newcommand{\B}{\mathbb{B}}
+\DeclareMathOperator{\diag}{diag}
 \renewcommand{\P}{\mathcal{P}}
+\renewcommand{\S}{\mathbb{S}}
 \newcommand{\ZnZ}{\mathbb{Z}/n\mathbb{Z}}
 \newcommand{\ZmZ}{\mathbb{Z}/m\mathbb{Z}}
 \newcommand{\0}{\mathbf{0}}
@@ -203,7 +206,7 @@ numbered=no
 \newcommand{\gr}{\text{gr }}
 
 %%%% MATRICES
-\newcommand\mx[1]{\left[\begin{matrix}#1\end{matrix}\right]} 
+\newcommand\mx[1]{\left[\begin{matrix}#1\end{matrix}\right]}
 
 \renewcommand\qedsymbol{$\diamondsuit$}
 
