--- a/diferenciales/input/0-notacion.tex
+++ b/diferenciales/input/0-notacion.tex
@@ -45,5 +45,18 @@
         $$
         X' = \mathbb{A}(t) X + B(t)
         $$
+        \item La matriz diagonal:
+            $$ \diag(a_1, a_2, a_3, a_n) =
+                \mx{
+                    a_1 & 0  & 0  & 0  \\
+                     0  &a_2 & 0  & 0  \\
+                     0  & 0  & a_3& 0  \\
+                     0  & 0  & 0  & a_n
+                }
+            $$
+        \item La matriz formada por los vectores columna $X_1, \ldots X_n$:
+        $$
+        \mx{\uparrow && \uparrow\\ X_1(t_0) & \cdots & X_n(t_0) \\ \downarrow && \downarrow}
+        $$
     \end{itemize}
 \end{multicols}
