--- a/diferenciales/input/3-ecuaciones-lineales-orden-sup.tex
+++ b/diferenciales/input/3-ecuaciones-lineales-orden-sup.tex
@@ -497,7 +497,7 @@ Como comentarios a este desarrollo:
         \mbf{y}_2 = -1 + \frac{x}{2}\log\left(\frac{1+x}{1-x}\right)
     \end{gather*}
 
-    Podemos observar que $\mbf{y}_2 = -1 + \frac{x}{2}\log\left|\frac{1+x}{1-x}\right|$ es solución en los dos intervalos de $|x| > 1$, aunque \texit{explota} en $x = \pm 1$.
+    Podemos observar que $\mbf{y}_2 = -1 + \frac{x}{2}\log\left|\frac{1+x}{1-x}\right|$ es solución en los dos intervalos de $|x| > 1$, aunque \textit{explota} en $x = \pm 1$.
     $$
         \mbf{y}'' - \frac{2x}{1-x^2}\mbf{y}' + \frac{2}{1-x^2}\mbf{y} = 0
     $$
