Capitulo 4 y 5 de la asignatura. Clase del 14/03

--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -207,6 +207,7 @@ numbered=no
 \newcommand{\0}{\mathbf{0}}
 \newcommand{\1}{\mathbf{1}}
 \newcommand{\gr}{\text{gr }}
+\newcommand\ninf[1]{\left|\left|#1\right|\right|_\infty}
 
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
@@ -235,6 +236,7 @@ Revisión del \today $ $ a las \currenttime.
 \input{input/3-ecuaciones-lineales-orden-sup}
 \part{Segundo parcial}
 \input{input/4-sistemas-lineales}
+\input{input/5-teorema-unicidad}
 \part{Tercer parcial}
 
 \part{Ap\'{e}ndices}
