--- a/diferenciales/input/0-notacion.tex
+++ b/diferenciales/input/0-notacion.tex
@@ -58,5 +58,7 @@
         $$
         \mx{\uparrow && \uparrow\\ X_1(t_0) & \cdots & X_n(t_0) \\ \downarrow && \downarrow}
         $$
+        \item $f_n \to_{pp} f$, $f_n$ converge puntualmente (o punto a punto) a $f$.
+        \item $f_n \to_{unif} f$, $f_n$ converge uniformemente a $f$.
     \end{itemize}
 \end{multicols}
